# ostl

./: .dockerignore  .gitignore  README.md  docker-compose.yml  jenkinsfile  makefile
ostl/: .clang-format  CMakeLists.txt
ostl/cmake/: make-executable.cmake  make-library.cmake  make-testsuite.cmake  subdirectory-glob.cmake  warning.cmake
ostl/example/: CMakeLists.txt
ostl/example/sphere/: CMakeLists.txt
ostl/example/sphere/src/sphere/: main.cpp
ostl/example/window/: CMakeLists.txt
ostl/example/window/src/window/: main.cpp
ostl/source/: CMakeLists.txt
ostl/source/abacus/: CMakeLists.txt
ostl/source/abacus/include/abacus/matrix/: matrix.hpp  matrix_base.hpp  matrix_base.inl  matrix_constructor.inl  matrix_operator.inl  matrix_utility.inl
ostl/source/caldera/: CMakeLists.txt
ostl/source/caldera/include/caldera/: caldera.hpp
ostl/source/caldera/include/caldera/glfw/: glfw.hpp  glfw_shell.hpp  glfw_utils.hpp
ostl/source/caldera/include/caldera/renderer/: configuration.hpp  renderer.hpp  utility.hpp
ostl/source/caldera/include/caldera/vulkan/: configuration.hpp  debug.hpp  debugger.hpp  utility.hpp  vulkan.hpp
ostl/source/caldera/src/caldera/: caldera.cpp
ostl/source/caldera/src/caldera/glfw/: glfw.cpp  glfw_shell.cpp  glfw_utils.cpp
ostl/source/caldera/src/caldera/renderer/: debugger.cpp  renderer.cpp
ostl/source/caldera/src/caldera/vulkan/: debugger.cpp  vulkan.cpp
ostl/source/caldera/src/glfw/: glfw_utils.cpp
ostl/source/detail/: CMakeLists.txt  README.md
ostl/source/detail/include/detail/: detail.hpp
ostl/source/detail/include/detail/collection/: set.hpp  tuple.hpp
ostl/source/detail/include/detail/concepts/: concepts.hpp
ostl/source/detail/include/detail/functools/: functools.hpp  map.hpp  property.hpp
ostl/source/detail/include/detail/itertools/: enumerate.hpp  itertools.hpp  tuple_transform.hpp  zip.hpp
ostl/source/detail/include/detail/logging/: loggable.hpp  logger.hpp  logging.hpp
ostl/source/detail/include/detail/pattern/: compose.hpp  visitor.hpp
ostl/source/detail/include/detail/type_traits/: type_traits.hpp
ostl/source/detail/include/detail/utility/: match.hpp  type.hpp
ostl/source/detail/src/logging/: loggable.cpp  logger.cpp
ostl/source/glass/: CMakeLists.txt
ostl/source/glass/include/glass/: base.hpp  glass.hpp  handler.hpp  shader.hpp
ostl/source/glass/include/glass/event/: handler.hpp  key.hpp  keyboard.hpp
ostl/source/glass/include/glass/keyboard/: action.hpp  event.hpp  key.hpp
ostl/source/glass/src/glass/: base.cpp  glass.cpp  handler.cpp  shader.cpp
ostl/source/glass/src/glass/event/: handler.cpp
ostl/source/heron/: CMakeLists.txt
ostl/source/heron/include/heron/: heron.hpp
ostl/source/heron/include/heron/matrix/: matrix.hpp  matrix.inl  matrix_base.hpp  matrix_base.inl  matrix_constructor.inl  matrix_operator.inl  matrix_utility.inl
ostl/source/keros/: CMakeLists.txt
ostl/source/keros/include/keros/: keros.hpp
ostl/source/keros/include/keros/reflect/: reflect.hpp
ostl/source/keros/include/keros/reflect/code/: assignment.hpp  binary_expression.hpp  body_holder.hpp  code.hpp  code_block.hpp  code_element.hpp  directive.hpp  expression.hpp  for_.hpp  if_.hpp  invocation.hpp  literal.hpp  local_variable.hpp  modifier.hpp  reference.hpp  right_hand_side_receiver.hpp  statement.hpp  statement_list.hpp  unary_expression.hpp  variable_reference.hpp
ostl/source/keros/include/keros/reflect/declaration/: declaration.hpp  file.hpp  function.hpp  modifiable.hpp  named.hpp  shader.hpp  type.hpp  typed.hpp  variable.hpp
ostl/source/keros/include/keros/reflect/model/: default_model.hpp  element.hpp  metamodel.hpp  model.hpp  utility.hpp
ostl/source/keros/include/keros/writer/: context.hpp  scope.hpp  stage.hpp  type.hpp  writer.hpp
ostl/source/keros/src/keros/writer/: context.cpp  writer.cpp
ostl/source/ostl/: CMakeLists.txt
ostl/source/ostl/include/ostl/: drawer.hpp  event.hpp  ostl.hpp  stopwatch.hpp  texture.hpp  window.hpp
ostl/source/ostl/include/ostl/drawer/: sphere_drawer.hpp
ostl/source/ostl/include/ostl/dsl/: dsl.hpp  glsl.hpp  matrix.hpp
ostl/source/ostl/include/ostl/object/: sphere.hpp
ostl/source/ostl/include/ostl/texture/: no_texture.hpp
ostl/source/ostl/src/: main.cpp
ostl/source/ostl/src/ostl/: stopwatch.cpp  window.cpp  window.hpp
ostl/source/ostl/src/ostl/object/: sphere.cpp
ostl/source/ostl/src/ostl/texture/: no_texture.cpp
ostl/test/: CMakeLists.txt
ostl/test/abacus/: CMakeLists.txt
ostl/test/abacus/src/abacus/matrix/: matrix.cpp
ostl/test/detail/: CMakeLists.txt
ostl/test/detail/src/detail/concepts/: concepts.cpp
ostl/test/detail/src/detail/functools/: property.cpp
ostl/test/detail/src/detail/pattern/: compose.cpp  visitor.cpp
ostl/test/detail/src/detail/type_traits/: type_traits.cpp
ostl/test/detail/src/detail/utility/: match.cpp
ostl/test/heron/: CMakeLists.txt
ostl/test/heron/src/abacus/matrix/: matrix.cpp
ostl/test/heron/src/heron/matrix/: matrix.cpp
ostl/test/keros/: CMakeLists.txt
ostl/test/keros/src/keros/: keros.cpp
ostl/test/ostl/: CMakeLists.txt
ostl/test/ostl/src/ostl/: ostl.cpp
(+12 files in other folders)
